MD Settings: Add "Auto Open" setting to Downloads C++ handler.

BUG=692662

Review-Url: https://codereview.chromium.org/2711823002
Cr-Commit-Position: refs/heads/master@{#453035}

Former-commit-id: b8ab8bd804ea8206e8f11ed10c6ea93a9b0dffcf